--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular": "1.6.4",
-    "animate.css": "animate-css#~3.5.2"
+    "animate.css": "animate-css#~3.5.2",
+    "bootstrap-grid-only": "~1.0.0"
   }
 }
